--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
-<html lang=“en”>
+<html></html>
 <head>
-    <meta charset=“UTF-8">
-    <meta http-equiv=“X-UA-Compatible” content=“IE=edge”>
-    <meta name=“viewport” content=“width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jeremy Backer Design</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    <p>Hello World!</p>
+    <div class="logo"></div>
+    <div class="nav">
+
+    </div>
 </body>
 </html>
+
+
+<!-- A <header> tag
+An <img> tag
+A <p> tag
+A <ul> tag
+Four <li> tags containing the text:
+About
+Skills
+Work
+Contact
+ -->
