--- a/index.html
+++ b/index.html
@@ -1,25 +1,44 @@
 <!DOCTYPE html>
-<html></html>
+<html>
 <head>
     <title>Jeremy Backer Design</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    <div class="logo"></div>
-    <div class="nav">
-
+    
+   <!-- Header Section -->
+    <header class="navigation">
+    <div class="inline-block logo">
+        <img src="/Users/jb/Documents/MyCode/17 Week/17-homework/images/JB_Logo_Black.png">
     </div>
+    <nav class="inline-block">
+        <ul>
+            <li>about</li>
+            <li>skills</li>
+            <li>work</li>
+            <li>contact</li>
+        </ul>
+    </nav>
+   </header>
+
+   <!-- Hero Image -->
+   <section class="heroImg">
+    <div class="content">
+        <img src="/Users/jb/Documents/MyCode/17 Week/17-homework/images/IMG_0591.JPG">
+        <p>A Creative Director with over 10 years of experience working in branding, collateral design, merchandise, packaging, web design, and user interface design. I have experience working both in-house and for creative agencies on large campaigns. It is always my goal to work with people who look to truly make a difference in the areas they are passionate about.</p>
+        <button>Download Resume</button>
+    </div>
+   </section>
+
+   <!-- Footer Section -->
+    <footer>
+        <ul>
+            <li class="inline-block">about</li>
+            <li class="inline-block">skills</li>
+            <li class="inline-block">work</li>
+            <li class="inline-block">contact</li>
+        </ul>
+    </footer>
+
 </body>
 </html>
-
-
-<!-- A <header> tag
-An <img> tag
-A <p> tag
-A <ul> tag
-Four <li> tags containing the text:
-About
-Skills
-Work
-Contact
- -->
