--- a/index.html
+++ b/index.html
@@ -2,22 +2,23 @@
 <html>
 <head>
     <title>Jeremy Backer Design</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     
    <!-- Header Section -->
     <header class="navigation">
-    <div class="inline-block logo">
-        <img src="/Users/jb/Documents/MyCode/17 Week/17-homework/images/JB_Logo_Black.png">
-    </div>
-    <nav class="inline-block">
-        <ul>
-            <li>about</li>
-            <li>skills</li>
-            <li>work</li>
-            <li>contact</li>
-        </ul>
+        <div class="inline-block logo">
+         <img src="/Users/jb/Documents/MyCode/17 Week/17-homework/images/JB_Logo_Black.png">
+        </div>
+        <nav class="inline-block">
+            <ul>
+                <li class="inline-block">about</li>
+                <li class="inline-block">skills</li>
+                <li class="inline-block">work</li>
+                <li class="inline-block">contact</li>
+            </ul>
     </nav>
    </header>
 
