--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <!-- Header Section -->
     <header class="navigation">
         <div class="inline-block logo">
-         <img src="/Users/jb/Documents/MyCode/17 Week/17-homework/images/JB_Logo_Black.png">
+         <img src="assets/images/JB_Logo_Black.png">
         </div>
         <nav class="inline-block">
             <ul>
@@ -25,7 +25,7 @@
    <!-- Hero Image -->
    <section class="heroImg">
     <div class="content">
-        <img src="/Users/jb/Documents/MyCode/17 Week/17-homework/images/IMG_0591.JPG">
+        <img src="assets/images/IMG_0591.JPG">
         <p>A Creative Director with over 10 years of experience working in branding, collateral design, merchandise, packaging, web design, and user interface design. I have experience working both in-house and for creative agencies on large campaigns. It is always my goal to work with people who look to truly make a difference in the areas they are passionate about.</p>
         <button>Download Resume</button>
     </div>
