--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
    </section>
 
    <!-- Footer Section -->
-    <footer>
+    <footer class="parent-container">
         <ul>
             <li class="inline-block">About</li>
             <li class="inline-block">Skills</li>
